etc/tests/error/heap/raii-gc-conflict.ny
;; flags: --heap=raii -gc
;; expect: --heap=raii cannot be combined with -gc
print(1)
